Fix images stretching on IE 11

--- a/great-western-wine-theme/assets/scss/components/stencil/productView/_productView.scss
+++ b/great-western-wine-theme/assets/scss/components/stencil/productView/_productView.scss
@@ -54,7 +54,7 @@
     img {
         @include lazy-loaded-img;
         max-height: 100%;
-        width: 100%;
+        width: auto;
         object-fit: contain;
         /* Object-fit polyfill */
         font-family: 'object-fit: contain;';
